--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -3,6 +3,10 @@
 // For more information: https://material.angular.io/guide/theming
 @use 'node_modules/@angular/material' as mat;
 @use 'variables' as variables;
+
+@use 'sass:map';
+@import "table-style";
+@import "bootstrap-grid.min.css";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -38,3 +42,32 @@ $Wefox-theme: mat.define-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+$color-config:    mat.get-color-config(variables.$wefox-palette);
+$primary-palette: map.get($color-config, 700);
+$light-primary-palette: map.get($color-config, 25);
+$accent-palette:  map.get($color-config, 900);
+
+.no-pointer {
+  cursor: initial;
+}
+.pointer {
+  cursor: pointer;
+}
+
+.title-area {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main {
+  background-color: $primary-palette;
+  color: white;
+}
+
+.dialog-actions {
+  margin-top: 10px;
+  display: block;
+  width: 100%;
+  text-align: right;
+}
