--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -2,20 +2,22 @@
 @import 'node_modules/@angular/material/core/theming/_palette';
 
 $wefox-palette: (
-  50: febee,
-  100: #f4e6f6,
-  200: #d298de,
-  300: #c06fd0,
-  400: #b24fc6,
-  500: #a433bb,
-  600: #952fb5,
-  700: #822aac,
-  800: #7026a4,
-  900: #501e96,
+  25: #f7f5fa,
+  50: #f4e6f6,
+  100: #d298de,
+  200: #c06fd0,
+  300: #b24fc6,
+  400: #a433bb,
+  500: #952fb5,
+  600: #822aac,
+  700: #7026a4,
+  800: #501e96,
+  900: #2d0a62,
   A100: #f49cff,
   A200: #c062d3,
   A400: #a921c2,
   A700: #7c0db0,
+  warn: red,
   contrast: (
     50: $dark-primary-text,
     100: $dark-primary-text,
@@ -33,4 +35,5 @@ $wefox-palette: (
     A700: $light-primary-text,
   )
 );
+
 
