--- a/src/app/modules/trips-list/trips-list.component.html
+++ b/src/app/modules/trips-list/trips-list.component.html
@@ -1,8 +1,9 @@
 <div class="row">
-  <app-trips-table (onDelete)="handleOnDelete($event)" (onEdit)="handleOnEdit($event)" class="offset-2 col-8" [places]="places |async"></app-trips-table>
+  <app-trips-table (onDelete)="handleOnDelete($event)" (onEdit)="handleOnEdit($event)" class="col-12"
+                   [places]="places |async"></app-trips-table>
 </div>
 <div style="vertical-align: bottom" class="row">
-  <div class="button-container-field-inline dialog-actions col-10">
+  <div class="button-container-field-inline dialog-actions col-12">
     <button mat-raised-button class="main" (click)="handleOnAdd()">
       {{'general.add-trip' | translate}}
     </button>
