--- a/src/app/modules/trips-list/trips-list.component.html
+++ b/src/app/modules/trips-list/trips-list.component.html
@@ -9,3 +9,8 @@
     </button>
   </div>
 </div>
+<div class="row">
+    <div class="col-12">
+        <app-random-trip></app-random-trip>
+    </div>
+</div>
