--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -78,6 +78,12 @@ h1 {
   font-weight: bold !important;
 }
 
+h2 {
+  color: $primary-palette;
+  font-size: 25px !important;
+  font-weight: bold !important;
+}
+
 .container {
   padding-top: 25px;
   padding-bottom: 25px;
