--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div class="row logo-row">
+    <div class="col-12 logo" [routerLink]="['list']">
+        <img src="assets/images/logo.png" style="height: 80px"/>
+    </div>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
