--- a/src/app/modules/edit-trip-dialog/edit-trip-dialog.component.html
+++ b/src/app/modules/edit-trip-dialog/edit-trip-dialog.component.html
@@ -11,21 +11,35 @@
 <div mat-dialog-content>
   <form [formGroup]="form">
     <div class="row">
-      <mat-form-field appearance="outline" class="mat-form-field col-6">
+      <mat-form-field appearance="outline" class="mat-form-field col-4">
         <mat-label>{{"edit-trip-dialog.place" | translate}}</mat-label>
         <input type="text" matInput formControlName="title"/>
         <mat-error  *ngIf="!form.get('title').valid">{{form.get('title').errors | translateError}}</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="mat-form-field col-3">
         <mat-label>{{"edit-trip-dialog.lat" | translate}}</mat-label>
-        <input type="text" matInput formControlName="lat"/>
+        <input type="text" matInput formControlName="lat" (change)="getPlace()"/>
         <mat-error  *ngIf="!form.get('lat').valid">{{form.get('lat').errors | translateError}}</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" class="mat-form-field col-3">
         <mat-label>{{"edit-trip-dialog.lon" | translate}}</mat-label>
-        <input type="text" matInput formControlName="long"/>
+        <input type="text" matInput formControlName="long"  (change)="getPlace()"/>
         <mat-error  *ngIf="!form.get('long').valid">{{form.get('long').errors | translateError}}</mat-error>
       </mat-form-field>
+      <div class="col-2">
+        <button mat-raised-button class="main map-button" (click)="showMap = !showMap;">
+          <div *ngIf="!showMap">{{'show-map' | translate}}</div>
+          <div *ngIf="showMap">{{'hide-map' | translate}}</div>
+        </button>
+      </div>
+    </div>
+    <div class="row" style="padding-bottom: 25px;" *ngIf="showMap">
+        <div class="col-12">
+          <div style="height: 500px; width: 100%" leaflet
+               [leafletOptions]="options" (leafletClick)="onMapClick($event)">
+            <div [leafletLayer]="layer"></div>
+          </div>
+        </div>
     </div>
     <div class="row">
       <mat-form-field appearance="outline" class="mat-form-field col-12">
